--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,5 @@
 .navbar {
     background-color: #FCFCFC;
-    color: white;
 }
 
 html {
@@ -14,23 +13,23 @@ html {
     margin: 1%;
     margin-top: 3%;
     border-radius: 10px;
-    height: 700px
+    height: 650px
 }
 
 #To-Do * {
-    background-color: red;
+    background-color: rgba(255, 89, 100, .6);
     border-radius: 10px;
+    border: rgb(255, 89, 100) solid 3px
 }
 
 #doing * {
-    background-color: yellow;
+    background-color: rgba(255, 231, 76, .6);
     border-radius: 10px;
+    border: rgb(255, 231, 76) solid 3px
 }
 
 #done * {
-    background-color: green;
+    background-color: rgba(167, 297, 75, .6);
     border-radius: 10px;
+    border: rgb(167, 297, 75) solid 3px;
 }
-
-
-
