--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -8,7 +8,7 @@ html {
 
 .column {
     background-color: #FCFCFC;
-    border: solid 2px hsl(217, 71%, 53%);
+    border: solid 3px hsl(217, 71%, 53%);
     color: black;
     margin: 1%;
     margin-top: 3%;
@@ -19,17 +19,21 @@ html {
 #To-Do * {
     background-color: rgba(255, 89, 100, .6);
     border-radius: 10px;
-    border: rgb(255, 89, 100) solid 3px
+    border: rgb(255, 89, 100) solid 3px;
+    box-shadow: 3px 3px #888888;
+
 }
 
 #doing * {
     background-color: rgba(255, 231, 76, .6);
     border-radius: 10px;
-    border: rgb(255, 231, 76) solid 3px
+    border: rgb(255, 231, 76) solid 3px;
+    box-shadow: 3px 3px #888888;
 }
 
 #done * {
     background-color: rgba(167, 297, 75, .6);
     border-radius: 10px;
     border: rgb(167, 297, 75) solid 3px;
+    box-shadow: 3px 3px #888888;
 }
