--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,6 @@
 /* color pallette
 bluish-white: #FCFCFC;
-dark-gray: #4C5454;
+gray: #899999;
 light-blue: hsl(217, 71%, 53%);
 dark-blue: #29335C
 red: rgb(255, 89, 100);
@@ -9,12 +9,12 @@ green: rgb(167, 297, 75)
 bright-pink: #B8336A
 */
 
-nav {
+.navbar {
     background-color: #29335C;
 }
 
 html {
-    background-color: #4C5454
+    background-color: #899999
 }
 
 .column {
@@ -27,7 +27,7 @@ html {
     height: 650px;
 }
 
-#To-Do * {
+#toDo * {
     background-color: rgba(255, 89, 100, .6);
     border-radius: 10px;
     border: rgb(255, 89, 100) solid 3px;
