--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -47,3 +47,11 @@ html {
     border: rgb(167, 297, 75) solid 3px;
     box-shadow: 3px 3px #888888;
 }
+
+#taskDropDown select {
+    display: none;
+}
+
+#taskDropDown {
+    background-color: lightgreen;
+}
